--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "beautiful-react-hooks": "^1.0.2",
+    "bootstrap": "^5.1.3",
+    "kioskboard": "^1.4.0",
+    "mespeak": "^2.0.2",
+    "mobx": "^6.3.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-responsive": "^9.0.0-beta.4",
     "react-scripts": "4.0.3",
+    "react-simple-keyboard": "^3.3.32",
+    "react-switch": "^6.0.0",
+    "react-virtual-keyboard": "^1.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
