--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.17.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "beautiful-react-hooks": "^1.0.2",
     "bootstrap": "^5.1.3",
+    "customize-cra": "^1.0.0",
     "kioskboard": "^1.4.0",
     "mespeak": "^2.0.2",
-    "mobx": "^6.3.7",
+    "mobx": "^6.3.13",
+    "mobx-persist": "^0.4.1",
+    "mobx-react": "^7.2.1",
+    "mobx-react-devtools": "^6.1.1",
+    "mobx-react-form": "^3.2.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.11",
     "react-bootstrap": "^2.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
@@ -20,6 +27,8 @@
     "react-simple-keyboard": "^3.3.32",
     "react-switch": "^6.0.0",
     "react-virtual-keyboard": "^1.0.2",
+    "valid-url": "^1.0.9",
+    "validatorjs": "^3.22.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -45,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.7"
   }
 }
