--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Gabi-Helper",
+  "name": "Gabi Helper - O ajudante de fala",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+      "src": "/images/logo.jpg",
+      "type": "image/svg+xml",
+      "sizes": "40x40"
+    }      
   ],
-  "start_url": ".",
+  "start_url": "/?source=pwa",
+  "background_color": "#fafafa",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "scope": "/",
+  "theme_color": "#fafafa"
 }
